Add rebasing and pruning to git pull

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -75,6 +75,11 @@
   guiDefault = auto
 
 
+[fetch]
+  prune = true
+  pruneTags = true
+
+
 [gpg]
   format = ssh
 
@@ -102,6 +107,10 @@
 
 [mergetool "vimdiff"]
   layout = LOCAL,MERGED,REMOTE
+
+
+[pull]
+  rebase = true
 
 
 [tag]
