Add short and long versions of `git l` and `git g`
- The full `git l` is now `git ll` and `git l` only prints 20 commits
- The full `git g` is now `git gg` and `git g` only prints 20 commits
- The full `git g-all` is now `git gg-all` and `git g-all` only prints
  20 commits

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -26,13 +26,16 @@
 	discard-all = "!f() { git restore \"$(git root)\"; } && f"
 
 	# Graph
-	g = log --graph --abbrev-commit --pretty=oneline
-	g-all = g --all
+	g = gg --max-count=20
+	gg = log --graph --abbrev-commit --pretty=oneline
+	g-all = gg-all --max-count=20
+	gg-all = gg --all
 	g-full = log --graph --pretty=fuller --show-signature
 	g-full-all = g-full --all
 
 	# Log
-	l = log --abbrev-commit --pretty=oneline
+	l = ll --max-count=20
+	ll = log --abbrev-commit --pretty=oneline
 	l-full = log --pretty=fuller --show-signature
 
 	# Resolve
