Add flags to `git stash list` in `git s`
- Use `git stash list --abbrev-commit --pretty=oneline --color=never` in
  `git s`

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -49,7 +49,7 @@
 	root = rev-parse --show-toplevel
 
 	# Status
-	s = "!f() { git status && printf '\\nStash:\\n' && stash=\"$(git stash list)\" && printf \"${stash:-(nothing stashed)}\\n\"; } && f"
+	s = "!f() { git status && printf '\\nStash:\\n' && stash=\"$(git stash list --abbrev-commit --pretty=oneline --color=never)\" && printf \"${stash:-(nothing stashed)}\\n\"; } && f"
 
 
 [commit]
