Fix the check in `git submit`
Commit 4f3caa525fe1d42e823f3cb75787bb250f23eb24 changed the `git check`
alias to check both staged and unstaged changes, but `git submit` should
only check staged changes, so it needs to stop using `git check`.

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -12,8 +12,8 @@
 	# Check
 	check = "!f() { printf 'Staged:\\n' && git diff --check --staged && printf '(no errors)\\n'; printf '\\nUnstaged:\\n' && git diff --check && printf '(no errors)\\n'; } && f"
 
-	# Check and Commit
-	submit = "!f() { git check && git commit \"$@\"; } && f"
+	# Commit (with a check before)
+	submit = "!f() { git diff --check --staged && git commit \"$@\"; } && f"
 
 	# Diff
 	d = difftool HEAD
@@ -25,7 +25,7 @@
 	discard = restore
 	discard-all = "!f() { git restore \"$(git root)\"; } && f"
 
-	# Graph
+	# Graph (Log)
 	g = gg --max-count=20
 	gg = log --graph --abbrev-commit --pretty=oneline
 	g-all = gg-all --max-count=20
@@ -38,10 +38,10 @@
 	ll = log --abbrev-commit --pretty=oneline
 	l-full = log --pretty=fuller --show-signature
 
-	# Resolve
+	# Resolve (Merge)
 	resolve = mergetool
 
-	# Remove
+	# Remove (opposite of `git add`)
 	rem = restore --staged
 	rem-all = reset --mixed
 
