--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -37,6 +37,10 @@
   // JavaScript/TypeScript settings:
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.quoteStyle": "single",
+  "javascript.preferences.importModuleSpecifier": "non-relative",
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "javascript.preferences.importModuleSpecifierEnding": "index",
+  "typescript.preferences.importModuleSpecifierEnding": "index",
 
   // Markdown settings:
   "[markdown]": {
