Use top pathspec magic (:/) instead of "git root"

--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -23,7 +23,7 @@
 
 	# Discard Changes
 	discard = restore
-	discard-all = "!f() { git restore \"$(git root)\"; } && f"
+	discard-all = restore :/
 
 	# Graph (Log)
 	g = gg --max-count=20
